# TP-Jazz-Jackrabbit-2

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  clean-all.cmake  client_main.cpp  install_all.sh  makefile  run_all.sh  run_test.sh  run_tests.sh  server_main.cpp
Fisicas/: bullet.h  character.cpp  character.h  item.h  main.cpp  physical_map.cpp  physical_map.h  physical_objects.h  player.cpp  player.h
client_src/: CMakeLists.txt  animation.cpp  animation.h  client.cpp  client.h  client_ammo_left.cpp  client_ammo_left.h  client_animation.cpp  client_animation.h  client_clock.h  client_config.h  client_constants.h  client_drawable.cpp  client_drawable.h  client_drawable_ammo.h  client_drawable_enemy.h  client_drawable_projectile.h  client_drawable_rabbit.h  client_drawable_valuable.h  client_drawer.cpp  client_drawer.h  client_fonts_printer.cpp  client_fonts_printer.h  client_food_provider.h  client_hearts_banner.cpp  client_hearts_banner.h  client_keyboard_handler.cpp  client_keyboard_handler.h  client_listener.cpp  client_listener.h  client_lobby.cpp  client_lobby.h  client_main.cpp  client_manager.cpp  client_manager.h  client_map_editor.h  client_map_loader.h  client_number_images.cpp  client_number_images.h  client_parser.cpp  (+23 more)
client_src/QT/: CMakeLists.txt  character_selector.cpp  character_selector.h  character_selector.ui  client_lobby.cpp  client_lobby.h  client_lobby.ui  join_match_lobby.cpp  join_match_lobby.h  join_match_lobby.ui  main.cpp  map_creator_lobby.cpp  map_creator_lobby.h  map_creator_lobby.ui  map_editor_lobby.cpp  map_editor_lobby.h  map_editor_lobby.ui  map_selector.cpp  map_selector.h  map_selector.ui  match_lobby.cpp  match_lobby.h  match_lobby.ui  qt_common_init.cpp  qt_common_init.h  resources.qrc  waiting_room.cpp  waiting_room.h  waiting_room.ui
client_src/SDL2pp/: CMakeLists.txt
client_src/SDL2pp/tests/: testing.h
client_src/animations/: lori.yml  spaz.yml  turtle.yml
client_src/animations/ammo/: basic_gun.yml  machine_gun.yml  ray_gun.yml  rocket_launcher.yml  sniper.yml
client_src/animations/projectiles/: blue_ray.yml  ray.yml  regular.yml  rocket.yml
common_src/: CMakeLists.txt  clock.h  common_errors.h  common_socket.cpp  constants.h  container_protocol.h  protected_list_of_queues.h  protocol.cpp  protocol.h  queue.h
common_src/snapshots/: snapshot.h  snapshot_enemy.h  snapshot_projectile.h  snapshot_rabbit.h  snapshot_supply.h
documentation/: documentation.md  project_report.md  technical_documentation.md  user_manual.md
documentation/UMLS/: client.puml  drawer.puml  execute_command.puml  game.puml  lobby.puml  protocol.puml  run_server.puml  sdl_miscellaneous.puml  server.puml  start_match.puml  texture_povider.puml
game_src/: CMakeLists.txt  constants_game.h  dynamic_map.h  game_info.cpp  game_info.h  information.h  manager.cpp  manager.h  map.cpp  map.h  map_parser.h  map_reader.h  qt_response.h  spawn_point.h
game_src/commands/: cheats.cpp  cheats.h  command.h  command_change_weapon.cpp  command_change_weapon.h  command_jump.cpp  command_jump.h  command_match.cpp  command_match.h  command_move.cpp  command_move.h  command_move_faster.cpp  command_move_faster.h  command_select_champion.cpp  command_select_champion.h  command_shoot.cpp  command_shoot.h  command_special_jazz.cpp  command_special_jazz.h  command_special_lori.cpp  command_special_lori.h  command_special_spaz.cpp  command_special_spaz.h
game_src/entities/: bullet.cpp  bullet.h  character.cpp  character.h  enemy.cpp  enemy.h  gun.cpp  gun.h  item.cpp  item.h  player.cpp  player.h  rabbit.cpp  rabbit.h  state.h
physics_src/: CMakeLists.txt  constants_physics.h  main.cpp  physical_map.cpp  physical_map.h  physical_objects.h
server_src/: CMakeLists.txt  broadcaster.cpp  broadcaster.h  broadcaster_snapshots.cpp  broadcaster_snapshots.h  config.h  constants_server.h  enemy.cpp  enemy.h  gameloop.cpp  gameloop.h  match.cpp  match.h  match_info.h  monitor_matches.cpp  monitor_matches.h  player_info.h  prueba  server.cpp  server.h  server_acceptor.cpp  server_acceptor.h  server_gameloop.cpp  server_gameloop.h  server_main.cpp  server_player.cpp  server_player.h  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_user.cpp  server_user.h  server_users.cpp  server_users.h
tests/: CMakeLists.txt  map_reader_tests.cpp  protocol_commands_tests.cpp  protocol_tests.cpp
